<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F30707"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".addBooks">

    <TextView
        style="@style/txtStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_a_book" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="@string/title"/>


    <EditText
        android:id="@+id/edtTitle"
        style="@style/editTextInfo"
        android:layout_marginTop="30dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="Type:"/>

    <Spinner
        android:id="@+id/spnTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:entries="@array/types" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="@string/number_of_pages"/>
    <EditText
        android:id="@+id/edtPages"
        style="@style/editTextInfo"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">


        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:onClick="backtoMain"
            android:text="@string/back" />


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>